# quant-eng-practice

./: .gitignore  README.md  pyproject.toml  requirements.tx  requirements.txt
app/: main.py  tvm.py
app/client/: __init__.py  client.py
shawlynot_quant/: api.py  markowitz.py  tvm.py  weiner.py
